--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW-11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <header class="header">
+        <div class="container">
+          <nav class="nav">
+            <a class="nav-logo" href="./index.html" aria-label="Site logo">
+              <svg class="nav-logo-icon" width="100" height="30">
+                <use href="{=$icon-path}"></use>
+              </svg>
+            </a>
+          </nav>
+        </div>
+      </header>
     </main>
-
-    <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
